objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Biomarker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For App Focus</description>
        <label>Biomarker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LQS_Water__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Water</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OneSource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RX_Decile__c</fullName>
        <label>RX Decile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>Sales Representative</description>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>used for SGL</description>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Behavioral Specialist</fullName>
                </value>
                <value>
                    <fullName>Cytogeneticist</fullName>
                </value>
                <value>
                    <fullName>Developmental Specialist</fullName>
                </value>
                <value>
                    <fullName>Family Physician</fullName>
                </value>
                <value>
                    <fullName>Genetic Counselor</fullName>
                </value>
                <value>
                    <fullName>Hematologist/Oncologist</fullName>
                </value>
                <value>
                    <fullName>Hematopathologist</fullName>
                </value>
                <value>
                    <fullName>Laboratory Director</fullName>
                </value>
                <value>
                    <fullName>Maternal Fetal Health</fullName>
                </value>
                <value>
                    <fullName>Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Medical Geneticist</fullName>
                </value>
                <value>
                    <fullName>Neonatology</fullName>
                </value>
                <value>
                    <fullName>OB/GYN</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pathologist</fullName>
                </value>
                <value>
                    <fullName>Pediatric Cardiologist</fullName>
                </value>
                <value>
                    <fullName>Pediatric Endocrinologist</fullName>
                </value>
                <value>
                    <fullName>Pediatric Hem-Onc</fullName>
                </value>
                <value>
                    <fullName>Pediatrician</fullName>
                </value>
                <value>
                    <fullName>Pediatric Neurologist</fullName>
                </value>
                <value>
                    <fullName>Pediatric Oncologist</fullName>
                </value>
                <value>
                    <fullName>Perinatology</fullName>
                </value>
                <value>
                    <fullName>Research Clinician</fullName>
                </value>
                <value>
                    <fullName>Send Out Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_SDx__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OBGYN</fullName>
                </value>
                <value>
                    <fullName>Office Staff</fullName>
                </value>
                <value>
                    <fullName>CBE</fullName>
                </value>
                <value>
                    <fullName>L&amp;D Staff</fullName>
                </value>
                <value>
                    <fullName>Cytogeneticist</fullName>
                </value>
                <value>
                    <fullName>Laboratory Director</fullName>
                </value>
                <value>
                    <fullName>MFM</fullName>
                </value>
                <value>
                    <fullName>Genetic Counselor</fullName>
                </value>
                <value>
                    <fullName>Pathologist</fullName>
                </value>
                <value>
                    <fullName>Send Out Coordinator</fullName>
                </value>
                <value>
                    <fullName>Hematology/Oncology</fullName>
                </value>
                <value>
                    <fullName>Medical Oncologist</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Cancer Center</fullName>
                </value>
                <value>
                    <fullName>Pediatric Neurologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_NTD__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Active - NTD</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LST Requested Field - also maps from Lead. Workflow to tag person as email opt out to remove from future promotions.</description>
        <inlineHelpText>Check box if this person is competitor. This will exclude from future mailings.</inlineHelpText>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Test__c</fullName>
        <label>Email Test</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Method__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Fax Method</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_Segment__c</fullName>
        <label>Diagnostics – Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Virology</fullName>
                </value>
                <value>
                    <fullName>Neonatal screening</fullName>
                </value>
                <value>
                    <fullName>1T screening</fullName>
                </value>
                <value>
                    <fullName>2T screening</fullName>
                </value>
                <value>
                    <fullName>Pre-eclampsia</fullName>
                </value>
                <value>
                    <fullName>NIPT</fullName>
                </value>
                <value>
                    <fullName>Clinical diagnostics</fullName>
                </value>
                <value>
                    <fullName>Clinical MSMS</fullName>
                </value>
                <value>
                    <fullName>BoBs</fullName>
                </value>
                <value>
                    <fullName>BoBs PGS</fullName>
                </value>
                <value>
                    <fullName>BoBs POC</fullName>
                </value>
                <value>
                    <fullName>BoBs postnatal diagnosis</fullName>
                </value>
                <value>
                    <fullName>BoBs prenatal diagnosis</fullName>
                </value>
                <value>
                    <fullName>BoBs stem cell screening</fullName>
                </value>
                <value>
                    <fullName>CGX arrays</fullName>
                </value>
                <value>
                    <fullName>CGX oncogenetics</fullName>
                </value>
                <value>
                    <fullName>CGX postnatal diagnosis</fullName>
                </value>
                <value>
                    <fullName>CGX prenatal diagnosis</fullName>
                </value>
                <value>
                    <fullName>Cytogenetics</fullName>
                </value>
                <value>
                    <fullName>FragilEase carrier screening</fullName>
                </value>
                <value>
                    <fullName>FragilEase newborn screening</fullName>
                </value>
                <value>
                    <fullName>FragilEase postnatal diagnosis</fullName>
                </value>
                <value>
                    <fullName>FragilEase prenatal diagnosis</fullName>
                </value>
                <value>
                    <fullName>Fragile X</fullName>
                </value>
                <value>
                    <fullName>NAP biobank</fullName>
                </value>
                <value>
                    <fullName>NAP blood screening</fullName>
                </value>
                <value>
                    <fullName>NAP HLA</fullName>
                </value>
                <value>
                    <fullName>NAP human genetics</fullName>
                </value>
                <value>
                    <fullName>NAP plants</fullName>
                </value>
                <value>
                    <fullName>NAP veterinary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>HC OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>HD OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICPMS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICPMS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LQS_Energy__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Energy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProf_ID__c</fullName>
        <label>MedProf ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nasal_Bone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nasal Bone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <label>Owner Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anesthesia System</fullName>
                </value>
                <value>
                    <fullName>ART/GE</fullName>
                </value>
                <value>
                    <fullName>Berthold</fullName>
                </value>
                <value>
                    <fullName>Beta FMT 2500</fullName>
                </value>
                <value>
                    <fullName>CareStream</fullName>
                </value>
                <value>
                    <fullName>CareStream Maestro</fullName>
                </value>
                <value>
                    <fullName>Confocal Microscope</fullName>
                </value>
                <value>
                    <fullName>CRI</fullName>
                </value>
                <value>
                    <fullName>FMT 1500</fullName>
                </value>
                <value>
                    <fullName>FMT 1500 to 2500 LX upgrade module</fullName>
                </value>
                <value>
                    <fullName>FMT 2500</fullName>
                </value>
                <value>
                    <fullName>FMT 2500 LX</fullName>
                </value>
                <value>
                    <fullName>FMT 2500 Two Channel Upgrade</fullName>
                </value>
                <value>
                    <fullName>Hamamatsu</fullName>
                </value>
                <value>
                    <fullName>Instrument -Beta FMT 1</fullName>
                </value>
                <value>
                    <fullName>Instrument-FMT 1</fullName>
                </value>
                <value>
                    <fullName>Kodak</fullName>
                </value>
                <value>
                    <fullName>Lab produced Agents</fullName>
                </value>
                <value>
                    <fullName>LiCor Agents</fullName>
                </value>
                <value>
                    <fullName>LiCor System</fullName>
                </value>
                <value>
                    <fullName>Olympus</fullName>
                </value>
                <value>
                    <fullName>VisEn Agents</fullName>
                </value>
                <value>
                    <fullName>VisEn Instruments and Agents</fullName>
                </value>
                <value>
                    <fullName>Xenogen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_Details__c</fullName>
        <inlineHelpText>This field contains the PI name and title etc</inlineHelpText>
        <label>PI Details</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAMAN_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RAMAN List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequencing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Application Focus Area</description>
        <label>Sequencing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Air__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Status - Air</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Turnback - Call Attempts Complete</fullName>
                </value>
                <value>
                    <fullName>Turnback - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Turnback - Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Rejected - Bad Contact Details</fullName>
                </value>
                <value>
                    <fullName>Rejected - Not Involved</fullName>
                </value>
                <value>
                    <fullName>Rejected - Distributor</fullName>
                </value>
                <value>
                    <fullName>Rejected - No Interest</fullName>
                </value>
                <value>
                    <fullName>Converted to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Re-Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Re-Qualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Next Gen</fullName>
                </value>
                <value>
                    <fullName>Sanger</fullName>
                </value>
                <value>
                    <fullName>Roche 454</fullName>
                </value>
                <value>
                    <fullName>Illumina Genome Analyzer</fullName>
                </value>
                <value>
                    <fullName>AB SOLiD</fullName>
                </value>
                <value>
                    <fullName>AB Sanger</fullName>
                </value>
                <value>
                    <fullName>Tag Profiling</fullName>
                </value>
                <value>
                    <fullName>ChIP Seq</fullName>
                </value>
                <value>
                    <fullName>Resequencing</fullName>
                </value>
                <value>
                    <fullName>Transcriptome Pipeline</fullName>
                </value>
                <value>
                    <fullName>De novo Genome Assembly</fullName>
                </value>
                <value>
                    <fullName>De novo Transcriptome Assembly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>WC OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WD_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>WD OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Role__c</fullName>
        <label>Buying Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Committee Member</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>GPZ Recommender</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Internal Champion</fullName>
                </value>
                <value>
                    <fullName>Purchasing Manager</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Point - IT</fullName>
                </value>
                <value>
                    <fullName>Point - DBA</fullName>
                </value>
                <value>
                    <fullName>Point - Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week__c</fullName>
        <formula>CASE( MOD( TODAY() - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail (Postal)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Count__c</fullName>
        <formula>IF(Email =  &quot;&quot;, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Energy List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Films_Kodak__c</fullName>
        <label>Films - Kodak</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Denville</fullName>
                </value>
                <value>
                    <fullName>Fisher</fullName>
                </value>
                <value>
                    <fullName>Genesee Sci</fullName>
                </value>
                <value>
                    <fullName>Mandel</fullName>
                </value>
                <value>
                    <fullName>Pierce</fullName>
                </value>
                <value>
                    <fullName>Sigma</fullName>
                </value>
                <value>
                    <fullName>VWR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ion_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For App Focus</description>
        <label>Ion Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Michel_Test__c</fullName>
        <label>Michel Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microplates__c</fullName>
        <label>Microplates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Fisher</fullName>
                </value>
                <value>
                    <fullName>VWR</fullName>
                </value>
                <value>
                    <fullName>Whatman</fullName>
                </value>
                <value>
                    <fullName>Greiner</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>Nunc</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiVendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MultiVendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Fax__c</fullName>
        <label>PKI SAP Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SAP_Ship_To__c</fullName>
        <label>Non-Rad / Reagent Ship-To #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_APS__c</fullName>
        <formula>IF(
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;APS - (ALH) SYSTEMS APPLICATION&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;APS - (ALH) SYSTEMS APPLICATION&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;APS - (ALH) SYSTEMS APPLICATION&quot;),
 INCLUDES(Product_Interest__c, &quot;APS&quot;),
 INCLUDES(Product_Line__c, &quot;APS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;15-APS&quot;)), 
 &quot;TRUE&quot; , &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-APS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_ARS__c</fullName>
        <formula>IF(
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;ARS - (ALH) SYSTEMS AUTOMATED ROBOTIC&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;ARS - (ALH) SYSTEMS AUTOMATED ROBOTIC&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;ARS - (ALH) SYSTEMS AUTOMATED ROBOTIC&quot;),
 INCLUDES(Product_Interest__c, &quot;ARS&quot;),
 INCLUDES(Product_Line__c, &quot;ARS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;35-ARS&quot;)),


 &quot;TRUE&quot; , &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-ARS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_AWS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;AWS - (ALH) AUTOMATED LIQUID HANDLING&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;AWS - (ALH) AUTOMATED LIQUID HANDLING&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;AWS - (ALH) AUTOMATED LIQUID HANDLING&quot;),
 INCLUDES(Product_Interest__c,&quot;Automated Liquid Handling - AWS&quot;),
 INCLUDES(Product_Line__c,&quot;AWS&quot;),
INCLUDES(BD_Product_Family_Interest__c, &quot;13-AWS&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-AWS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_BTX__c</fullName>
        <description>Consolidates product interest from LST Primary 1-3 for reports</description>
        <formula>IF( 
OR( 

ISPICKVAL(LST_Product_Interest_1__c, &quot;BTX - BIOTHERAPEUTICS&quot;) , 
ISPICKVAL(LST_Product_Interest_2__c, &quot;BTX - BIOTHERAPEUTICS&quot;) , 
ISPICKVAL(LST_Product_Interest_3__c, &quot;BTX - BIOTHERAPEUTICS&quot;), 
INCLUDES(Product_Interest__c, &quot;BTX&quot;), 
INCLUDES(Product_Line__c, &quot;BTX&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-BTX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_CKP__c</fullName>
        <formula>IF( 
OR( 

ISPICKVAL(LST_Product_Interest_1__c, &quot;CKP - REAGENTS CELLULAR KINETIC PHOTOPROTEINS&quot;) , 
ISPICKVAL(LST_Product_Interest_2__c, &quot;CKP - REAGENTS CELLULAR KINETIC PHOTOPROTEINS&quot;) , 
ISPICKVAL(LST_Product_Interest_3__c, &quot;CKP - REAGENTS CELLULAR KINETIC PHOTOPROTEINS&quot;), 
INCLUDES(Product_Interest__c, &quot;CKP&quot;), 
INCLUDES(Product_Line__c, &quot;CKP&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Summary-CKP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_CLH__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;CLH - (ALH) SYSTEMS CALIPER LIQUID HANDLING&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;CLH - (ALH) SYSTEMS CALIPER LIQUID HANDLING&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;CLH - (ALH) SYSTEMS CALIPER LIQUID HANDLING&quot;),
 INCLUDES(Product_Interest__c, &quot;CLH&quot;),
 INCLUDES(Product_Line__c, &quot;CLH&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-CLH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_CLR__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;CLR - REAGENTS CALIPER&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;CLR - REAGENTS CALIPER&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;CLR - REAGENTS CALIPER&quot;),
 INCLUDES(Product_Interest__c, &quot;CLR&quot;),
  INCLUDES(Product_Line__c, &quot;CLR&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-CLR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_DIS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;DIS - DISTRIBUTOR&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;DIS - DISTRIBUTOR&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;DIS - DISTRIBUTOR&quot;),
  INCLUDES(Product_Line__c, &quot;DIS&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-DIS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_DNA__c</fullName>
        <formula>IF( 
OR( 

ISPICKVAL(LST_Product_Interest_1__c, &quot;DNA - DNS Services&quot;) , 
ISPICKVAL(LST_Product_Interest_2__c, &quot;DNA - DNS Services&quot;) , 
ISPICKVAL(LST_Product_Interest_3__c, &quot;DNA - DNS Services&quot;), 
INCLUDES(Product_Interest__c, &quot;DNA&quot;), 
INCLUDES(Product_Line__c, &quot;DNA&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Summary-DNA</label>
        <type>Text</type>
    </fields>
</CustomObject>